fixed modal overflow

--- a/css/mem.css
+++ b/css/mem.css
@@ -171,12 +171,12 @@ body {
 
 .modal {
     position:absolute;
-    display: none;
+    /*display: none;*/
     z-index: 1;
     top:100px;
     width: 100%;
-    height: 100%;
-    /*overflow: auto;*/
+    margin: auto;
+    overflow: hidden;
     background-color: rgba(7, 1, 17, 0.4);
 }
 
